fix spacing in learn more, tidy up and set media queries

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   font-size: 14px;
+  line-height: 1.4;
 }
 
 body {
@@ -14,7 +15,6 @@ h2 {
 }
 
 .container {
-  width: 90%;
   margin: 0 auto;
 }
 /* header */
@@ -70,6 +70,7 @@ h2 {
   background-color: #399bd1;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
   padding: 1.3rem 0;
+  border-radius: 5px;
 }
 
 .wrapper .btn:hover {
@@ -111,7 +112,27 @@ h2 {
   align-self: center;
 }
 
+.projects {
+  padding-bottom: 5.2rem;
+}
+
 /* having trouble */
 #learn-more {
+  background-color: #f3f3f3;
+}
+
+.learn-more-text {
   text-align: center;
+  padding: 5.2rem 0;
+}
+
+.learn-more-text h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding-bottom: 1.4rem;
+}
+
+.learn-more-text p {
+  max-width: 42rem;
+  margin: auto;
 }
